--- a/3/index.html
+++ b/3/index.html
@@ -8,14 +8,39 @@
 <body>
 
 <h3><a href="http://Test.backend.ADCI/index.php">Вернуться к оглавлению</a></h3>
+<h4>В этом задании я сперва сделал первый вариант. Но при наведении на надпись - получался странный
+    конфликт свойств и наблюдалось мерцание фона. Исправить не получалось, и я решил переделать.
+    Сделал второй вариант, все заработало нормально. На основе второго варианта переделал первый.
+    И все тоже заработало))</h4>
+<hr>
 
+<div class="wrap">
 
-<div class="joker_img">
-    <div class="description_text">Готэм, начало 1980-х годов. Комик Артур Флек постепенно приходит к выводу,
-        что этот мир получит от него не добрую улыбку, а ухмылку злодея Джокера.
+    <div class="header">
+        <div class="inner-header">Recently Added Videos</div>
+        <div class="inner-header1">
+            <div class="inner-content1"><</div>
+            <div class="inner-content2">1 - 2</div>
+            <div class="inner-content3">></div>
+        </div>
     </div>
-    <div class="name1">
-        <a href="#" class="text_link">JOKER</a>
+    <hr>
+
+    <div class="img joker">
+        <div class="click"><b>JOKER</b></div>
+        <div class="description">
+            <b>Готэм, начало 1980-х годов. Комик Артур Флек постепенно приходит к выводу,
+                что этот мир получит от него не добрую улыбку, а ухмылку злодея Джокера.</b>
+        </div>
+        <div class="background"></div>
+    </div>
+
+    <div class="img marvel">
+        <div class="click"><b>MARVEL</b></div>
+        <div class="description1">
+            <b>Серия фильмов о супергероях, основанная на комиксах компании Marvel.</b>
+        </div>
+        <div class="background1"></div>
     </div>
 
 </div>
