--- a/3/test1.html
+++ b/3/test1.html
@@ -2,40 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>Блок с тизерами</title>
+    <link href="test1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<div><img src="joker.jpg"> &nbsp;&nbsp;&nbsp;<img src="marvel1.jpg"></div>
+<h3><a href="http://Test.backend.ADCI/index.php">Вернуться к оглавлению</a></h3><hr>
 
-<a href="#" class="text_link">MARVEL</a>
-<div class="description_text">Серия фильмов о супергероях, основаннаяна комиксах
-    компании  Marvel
+<div class="wrap">
+
+    <div class="header">
+        <div class="inner-header">Recently Added Videos</div>
+        <div class="inner-header1">
+            <div class="inner-content1"><</div>
+            <div class="inner-content2">1 - 2</div>
+            <div class="inner-content3">></div>
+        </div>
+    </div><hr>
+
+    <div class="img joker">
+        <div class="click"><b>JOKER</b></div>
+        <!--<div class="description">
+            <b>Готэм, начало 1980-х годов. Комик Артур Флек постепенно приходит к выводу,
+                что этот мир получит от него не добрую улыбку, а ухмылку злодея Джокера.</b>
+        </div>-->
+        <div class="background"></div>
+    </div>
+
+    <div class="img marvel">
+        <div class="click"><b>MARVEL</b></div>
+        <!--<div class="description">
+            <b>Серия фильмов о супергероях, основанная на комиксах компании Marvel.</b>
+        </div>-->
+        <div class="background1"></div>
+    </div>
+
 </div>
-<br>
-<a href="#" class="text_link">JOKER</a>
-<div class="description_text">Готэм, начало 1980-х годов. Комик Артур Флек постепенно приходит к выводу,
-    что этот мир получит от него не добрую улыбку, а ухмылку злодея Джокера.
-</div>
-
-id="test" --> #test {} - можно задавать стили для всего отдельно по идентификатору
-opacity: 0.5; - прозрачность элемента
-color: #000000; цвет текста
-display: - это свойство нужно для того что бы указать виден элемент или нет, по умолчанию bloсk(виден) если none - НЕвиден
-background-image: url(""); картинка для фона блока или класса(задается относительно CSS файла)
-background-color: #000000; цвет фона
-border: 2px solid #000000 цвет рамки
-font-size: 16px; - размер текста
-margin: 10px; - расстояние между блоками, отступы(отталкивание между ними)
-padding: 10px; - внутренне отталкивание текста от рамак (отступы)
-text-align: center; - выравнивание текста в заданном блоке
-font-weight: 400; - жирность шрифта
-transition: all 0.4s; - время длительности анимации (где all можно конкретный класс указать)
-display: inline-block; блоки будут занимать место равное своему размеру
-
-#test:hover {
-тут пишем все свойства которые начнут работать при наведении курсора
-}
 
 
 </body>
